--- a/index.html
+++ b/index.html
@@ -13,12 +13,53 @@
 
 <body>
   <h2 class="question--title">Q7 サイズ変更</h2>
+  <div class="container">
+    <div class="q1"></div>
+  </div>
   <h2 class="question--title">Q2 色変更</h2>
+  <div class="container">
+    <div class="box-red"></div>
+  </div>
   <h2 class="question--title">Q3 margin値の変更</h2>
+  <div class="container">
+    <div class="box-blue"></div>
+    <div class="box-green"></div>
+  </div>
   <h2 class="question--title">Q4 floatの解除</h2>
+  <div class="clearfix">
+    <div class="floatbox-red"></div>
+    <div class="floatbox-blue"></div>
+  </div>
   <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
+  <div class="q5-container">
+    <div class="box-q5-red">
+      <p>A</p>
+    </div>
+    <div class="box-q5-blue">
+      <p>B</p>
+    </div>
+    <div class="box-q5-orange">
+      <p>C</p>
+    </div>
+  </div>
   <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
+  <div class="container">
+    <div class="box-q6-green">
+      <p>A</p>
+    </div>
+    <div class="box-q6-yellow">
+      <p>B</p>
+    </div>
+    <div class="box-q6-pink">
+      <p>C</p>
+    </div>
+  </div>
   <h2 class="question--title">Q7 要素の表示・非表示</h2>
+  <div class="container">
+    <div class="box-q7-red"></div>
+    <div class="box-q7-blue"></div>
+    <div class="box-q7-green"></div>
+  </div>
 </body>
 
 </html>
